disabled/sub2api/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sub2api
  labels:
    app: sub2api
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - sub2api.clusters.zjusct.io
    - sub2api.s.zjusct.io
  rules:
    - backendRefs:
        - name: sub2api
          port: 8080
      timeouts:
        request: 0s
        backendRequest: 0s
